--- a/02-JS and CSS Clock/index.html
+++ b/02-JS and CSS Clock/index.html
@@ -18,7 +18,8 @@
   </div>
   <style>
     html {
-      background-image: url('./assets/background.jpg');
+      /* background-image: url('./assets/background.jpg'); */
+      background-color: skyblue;
       background-size: cover;
       font-family: 'helvetica neue';
       text-align: center;
