--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <li>
       <span>01：</span><a href="./01-JavaScript Drum Kit/index.html">Javascript Drum kit</a>
     </li>
+    <li>
+      <span>02：</span><a href="./02-JS and CSS Clock/index-FINISHED.html">JS and CSS Clock</a>
+    </li>
   </ol> 
 </body>
-</html>
+</html
