--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <li>
       <span>02：</span><a href="./02-JS and CSS Clock/index-FINISHED.html">JS and CSS Clock</a>
     </li>
+    <li>
+      <span>03：</span><a href="./03-CSS Variables/index.html">CSS Variables</a>
+    </li>
   </ol> 
 </body>
 </html
